bin/testsuite/tests/compiler/src/errors/compiler4315.swg
#global testerror "Err0695"
struct A {}
impl A
{
    /* coucou */
    func toto(me = {})
    {
    }
}
